Creating driver service/controller. Adding exception filter

--- a/Taxi24.Domain/Taxi24.Domain.csproj
+++ b/Taxi24.Domain/Taxi24.Domain.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Validators\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Taxi24.Infrastructure\Taxi24.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
