Adding unit test and distance evaluation

--- a/Taxi24/appsettings.json
+++ b/Taxi24/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=Taxi24;Username=postgres;Password=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
