Include tables scripts

--- a/Taxi24/Taxi24.csproj
+++ b/Taxi24/Taxi24.csproj
@@ -9,6 +9,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="TablesWithSomeData.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="TablesWithSomeData.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.1.0" />
