--- a/Taxi24/Taxi24.csproj
+++ b/Taxi24/Taxi24.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,10 +10,6 @@
 
   <ItemGroup>
     <None Remove="TablesWithSomeData.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="TablesWithSomeData.sql" />
   </ItemGroup>
 
   <ItemGroup>
